# wish

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Notes.txt  README.md  release.yml
.github/workflows/: release.yml
app/codegen/: codegen_main.cpp
cmake/: _idea.cmake  wish.cmake  wish_compiler_flags.cmake  wish_create.cmake  wish_version.cmake
cmake/wish/: wish_configuration.cmake  wish_core.cmake  wish_create.cmake  wish_debug.cmake  wish_flags.cmake  wish_linker.cmake  wish_package.cmake  wish_platform.cmake  wish_resource.cmake  wish_system.cmake  wish_version.cmake
sandbox/aliases/: CMakeLists.txt
sandbox/smart_aliases/: CMakeLists.txt  main.cpp
sandbox/versions/: CMakeLists.txt  foo.cpp  foo.hpp  lib.cpp  main.cpp  version.cpp.in  version.hpp
src/: main.cpp
src/libA/: common.hpp  cto_single.hpp  cto_single.inh.lua  cto_split.cpp  cto_split.hpp  cto_split.ins.lua  test0.cpp  test1.cpp
src/libB/: test0.cpp
test/libA/: test0.cpp
